# Coumputer-Science-UBB

AI/Lab1/: AI_2024_lab_01.ipynb  Lab1.ipynb
AI/Lab2/: AI_lab2_2024.ipynb
AI/Lab3/: Lab3_AI_2023_unsolved.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  lab_3_original.ipynb
AI/Lab4/: AI_lab_4_2023-unsolved 2 1.ipynb
AI/Lab5/: AI_lab_5_2023-unsolved.ipynb
AI/Lab7/: AI_lab_7_2023_bug_fix_v4.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb
AI/Lab8/: Lab8_unsolved.ipynb
AI/Lab9/: Lab_9_2024.ipynb
AI/TryStuff/: Untitled.ipynb
ASC/Labs/: bonus.lst  link files cmd commands.txt
ASC/Practic/: ExamenPractic.asm  ExamenPractic.lst
ASC/Sesiune/: Cursuri Vancea - Fara 10.rar
AndroidThings/: ProjectIdea.txt
CN/: exam problem.docx
CN/Lab1/: Lab1.docx
CN/Lab2/: Lab2.docx  Lab2.m
CN/Lab3/: Lab 3.docx
DB/: BackupDBLab1.txt  practic data bases.txt  practic.sql
DB/PracticSeminar/: PracticAltaGrupaProcedura.sql  PracticAltaGrupaTabele.sql  Query_Exercise2.sql  Seminar6.txt  TabelePracticSeminar.sql  datePracticAlteGrupa.sql  practicDBSeminar.sql
DB/TryStuff/: AddDeleteUpdateQuery.sql  ClearTablesQuery.sql  FINAL.sql  SQLQuery3.sql  SQLQuery4.sql  SQLQuery5.sql  ShowAllQuery.sql  Solution1.ssmssln  TablesQuery.sql
DSA/: backup SDA.txt
DSA/Labs/FixedCapBIMap/: App.cpp  CMakeLists.txt  FixedCapBiMap.cpp  FixedCapBiMap.h  FixedCapBiMapIterator.cpp  FixedCapBiMapIterator.h
DSA/Labs/SetHashTableLab4/: App.cpp  CMakeLists.txt  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h
DSA/Labs/SortedIteratedListLab2/: App.cpp  CMakeLists.txt  ListIterator.cpp  ListIterator.h  SortedIteratedList.cpp  SortedIteratedList.h
DSA/Labs/SortedMapLab1/: App.cpp  CMakeLists.txt  SMIterator.cpp  SMIterator.h  ShortTest.cpp  SortedMap.cpp  SortedMap.h
Etica/: ForPPT.docx  Strava.avif  Summary.docx  strava afghanistan heat map.avif
FP/Sesiune/: OrderAndChaos1stVariant.rar  QuizzMaster.rar
FP/Test_functions/: main.py
GRAPHS/Assigement1_Bordianu_Raul_911/: copy_graph.txt  graph_lab.txt  random_graph1.txt  test_graph.txt
GRAPHS/Assigment2_Bordianu_Raul_911/: copy_graph.txt  main.py
GRAPHS/Assigment3_Bordianu_Raul_911/: Djikstra.py  Paths.txt  graph_lab.txt  random_graph2.txt
GRAPHS/Assigment4_Bordinu_Raul_911/: graph_lab.txt  graph_lab_no_path.txt  lab_4_path.txt  main.py  test.txt
ISS/: blank-feed.sql  blank-feed2.bacpac  seminar 2.graphml
ISS/Assigement1/: Functionalities.docx  UserUML.graphml
MPP/: Angular folder structure.txt
OOP/Seminar/Playlist_illustrative_implementation/: CMakeLists.txt
OOP/Seminar/Playlist_illustrative_implementation/Playlist/: Song.cpp  main.cpp
OOP/Seminar/Seminar3_Week2_stub/: CMakeLists.txt
OOP/Seminar/Seminar3_Week2_stub/Seminar3_Week2_stub/: DynamicVector.h  LinkedList.h  main.cpp
OOP/Seminar/Seminar4_911/: CMakeLists.txt
OOP/Seminar/Seminar4_911/Playlist/: CSVPlayList.cpp  CSVPlayList.h  FilePlayList.cpp  FilePlayList.h  JSONPlayList.cpp  JSONPlayList.h  Playlist.vcxproj  Playlist.vcxproj.filters  Service.cpp  Service.h  SongValidator.cpp  SongValidator.h  UI.cpp  main.cpp  playlist.csv  playlist.json
OOP/lab7/git/a7-BordianuRaul-1-674ac4916e22790f5227b6150b7c57f061f54caf/: CMakeLists.txt  WatchList.html  basic.txt  data.txt  main.cpp  test.txt  testRead.txt
OOP/lab7/git/a7-BordianuRaul-1-674ac4916e22790f5227b6150b7c57f061f54caf/Domain/: Tutorial.cpp
OOP/lab7/git/a7-BordianuRaul-1-674ac4916e22790f5227b6150b7c57f061f54caf/Headers/: CSVRepo.h  FileRepo.h  HTMLRepo.h  RepositoryException.h  Service.h  TestFileRepo.h  TestRepository.h  TestTutorial.h  Tests.h  Tutorial.h  TutorialValidator.h  UserInterface.h  testService.h
OOP/lab7/git/a7-BordianuRaul-1-674ac4916e22790f5227b6150b7c57f061f54caf/Repository/: CSVRepo.cpp  FileRepo.cpp  HTMLRepo.cpp  Repository.h
OOP/lab7/git/a7-BordianuRaul-1-674ac4916e22790f5227b6150b7c57f061f54caf/Service/: Service.cpp
OOP/lab7/git/a7-BordianuRaul-1-674ac4916e22790f5227b6150b7c57f061f54caf/Tests/: TestFileRepo.cpp  TestRepository.cpp  TestTutorial.cpp  Tests.cpp  testService.cpp
OOP/lab7/git/a7-BordianuRaul-1-674ac4916e22790f5227b6150b7c57f061f54caf/UserInterface/: UserInterface.cpp
OOP/lab7/git/a7-BordianuRaul-1-674ac4916e22790f5227b6150b7c57f061f54caf/Validators/: RepositoryException.cpp  TutorialValidator.cpp
OS/: New Text Document (2).txt  New Text Document.txt  Thread.txt  enunt.txt  lib.txt  nr.txt  oop.docx  pb.docx  tutorial.txt
PLF/: Depth.txt  EvenLevel.txt  K level.txt  LevelOfANode.txt  List of all nodes from tree.txt  NrLevels.txt  Path.txt
PPD/: Thread-uri sub 2.docx
SGBD/: Seminar1SGBD.docx
(+841 files in other folders)
